[package]
name = "enigma"
version = "0.1.0"
authors = ["Tomasz Flis <tflis84@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
futures = "0.1"
swagger = "2.2"
lazy_static = "1.4"
log = "0.3.0"
mime = "0.2.6"
multipart = "0.13.3"
serde = "1.0"
serde_derive = "1.0"
serde_ignored = "0.0.4"
serde_json = "1.0"
hyper = "0.11"
hyper-tls = "0.1.2"
native-tls = "0.1.4"
openssl = "0.9.14"
tokio-core = "0.1.6"
tokio-proto = "0.1.1"
tokio-tls = "0.1.3"
regex = "0.2"
percent-encoding = "1.0.0"
url = "1.5"
clap = "2.25"
error-chain = "0.12"
uuid = {version = "0.5", features = ["serde", "v4"]}

crypt-config = "^0.2.1"
enigmaservice = { path = "../enigmaservice" }

