[package]
name = "enigma"
version = "0.1.0"
authors = ["Tomasz Flis <tflis84@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "^0.1.24"
chrono = { version = "^0.4.13", features = ["serde"] }
env_logger = "^0.7"
futures = "^0.3"
swagger = "5.0.0-alpha-1"
lazy_static = "^1.4"
log = "^0.4.11"
mime = "^0.3"
multipart = "^0.17.0"
serde = "^1.0"
serde_derive = "^1.0"
serde_ignored = "^0.1.2"
serde_json = "^1.0"
hyper = "^0.13"
hyper-tls = "^0.4.3"
native-tls = "^0.2.4"
openssl = "^0.10.30"
tokio = { version = "^0.2", features = ["full"] }
tokio-core = "^0.1.17"
tokio-openssl = "^0.4"
tokio-proto = "^0.1.1"
tokio-tls = "^0.3.1"
regex = "^1.3.9"
percent-encoding = "^2.1"
url = "^2.1"
clap = "^2.33"
error-chain = "^0.12"
uuid = {version = "^0.8", features = ["serde", "v4"]}

crypt-config = "^0.2.2"
enigmaservice = { path = "../enigmaservice" }

